# rocket

./: .env  .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml  docker-compose.yml  new_user.json  test.md
assets/: error.txt
migrations/2025-01-11-092645_users/: down.sql  up.sql
migrations/2025-01-12-110645_words/: down.sql  up.sql
migrations/2025-01-12-111638_feedback/: down.sql  up.sql
migrations/2025-01-12-113203_tags/: down.sql  up.sql
migrations/2025-01-12-113450_word_tags/: down.sql  up.sql
migrations/2025-01-12-155858_user_test/: down.sql  up.sql
migrations/2025-01-12-195712_sub_nome/: down.sql  up.sql
migrations/2025-01-13-204253_user_fields_update/: down.sql  up.sql
migrations/2025-01-22-230333_rework/: up.sql
migrations/2025-01-26-104719_create_users/: up.sql
migrations/2025-01-26-224031_create_words/: down.sql  up.sql
migrations/2025-01-26-224137_create_comments/: up.sql
migrations/2025-01-26-224216_create_tags/: up.sql
migrations/2025-01-26-224352_create_word_tags/: down.sql  up.sql
migrations/2025-01-26-224514_create_word_types/: down.sql  up.sql
migrations/2025-01-26-224608_create_word_type/: down.sql  up.sql
src/: _models.rs  db.rs  main.rs  models _copy.txt  models.rs  schema.rs  tera.rs  types.rs
src/controllers/: users_controller.rs
src/errors/: mod.rs  password_error.rs
src/models/: comment.rs  enums.rs  feedback.rs  mod.rs  permissions.rs  role.rs  tag.rs  user.rs  word.rs  word_type.rs
src/utils/: hash.rs
static/camera/: camera.js  (+1 more)
templates/: base.html.tera  index.html.tera
(+15 files in other folders)
